--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
-  <meta charset="UTF-8">
-  <title>WORK GROUP</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
+    <meta charset="UTF-8" />
+    <title>WORK GROUP</title>
+  </head>
+  <body>
+    <main>
+      <h1>Index modifié par David</h1>
+    </main>
+  </body>
 </html>
