--- a/index.html
+++ b/index.html
@@ -1,14 +1,1 @@
-<!DOCTYPE html>
-<html lang="fr">
-  <head>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
-    <meta charset="UTF-8" />
-    <title>WORK GROUP</title>
-  </head>
-  <body>
-    <main>
-      <h1>Branche dev</h1>
-    </main>
-  </body>
-</html>
+<h1>Index HTML David</h1>
